2008-07-03  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.cpp: Allowing property references inside the same
	instance of a component.

2008-05-27  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Fixed small memory leak.

	* equation.cpp: Looking for variables also in the equation set
	(not just in dataset) for functions like, e.g., xvalue() and
	yvalue().

2008-04-23  Stefan Jahn  <stefan@lkcc.org>

	* check_touchstone.cpp: Fixed compile issue for some gcc/glibc
	combination (SuSE linux).

2008-04-11  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.cpp: Fixing compile issues for MSVC.

2008-03-27  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Allowing negative
	coupling coefficients for mutual inductors.

	* evaluate.cpp: Added some more allowed function arguments for
	relational operators.

2008-02-16  Stefan Jahn  <stefan@lkcc.org>

	* scan_netlist.l: Additionally allowing dBu in equations as well
	as mil, in, ft and yd in component properties.

2008-02-15  Stefan Jahn  <stefan@lkcc.org>

	* Fixed some compile warnings for g++ 4.3 version.

2008-01-18  Stefan Jahn  <stefan@lkcc.org>

	* circuit.cpp: Added new method setInternalNode().

	* evaluate.cpp: Allowing PlotVs() to take 3 and more arguments to
	construct multiple dependencies for vectors and matrix vectors.

	* equation.cpp: Fixed inheritance of multiple prep dependencies.

2008-01-02  Stefan Jahn  <stefan@lkcc.org>

	* scan_touchstone.l: Fixed bug in touchstone scanner.  Making the
	'R' in the option line case insensitive.

2007-12-30  Stefan Jahn  <stefan@lkcc.org>

	* parasweep.cpp: Allow parameter sweeps to display their own
	prgress bar.  Lower order sweeps and other simulations' progress
	bar get disabled.

2007-12-28  Stefan Jahn  <stefan@lkcc.org>

	* ucs.cpp (main): Evaluating error codes from analyses.  Changed
	solve() callback for each analysis to be able to return an error
	code.

	* trsolver.cpp: Avoiding "jacobian singular at t = nan" error
	message.
