@@ -1,3 +1,8 @@
+2008-08-14  Stefan Jahn  <stefan@lkcc.org>
+
+	* evaluate.cpp: Fixed range operator in indices in independent
+	vectors.
+
 2008-07-03  Stefan Jahn  <stefan@lkcc.org>
 
 	* check_netlist.cpp: Allowing property references inside the same
